autobuilder (4.4) unstable; urgency=low

  * Writing repository cache was failing because the read and write
    functions were interfering with each other.  Patch haskell-regex-base.

 -- David Fox <dsf@seereason.com>  Wed, 06 Feb 2008 22:15:45 -0800

autobuilder (4.3) unstable; urgency=low

  * Implement Use-Repo-Cache, which loads the most recent repository
    information to avoid long queries of remote servers.

 -- David Fox <ddssff@gmail.com>  Wed, 06 Feb 2008 16:02:19 -0800

autobuilder (4.2) unstable; urgency=low

  * Fix a VersionPolicy bug
  * Revamp progress reporting

 -- David Fox <dsf@seereason.com>  Mon, 04 Feb 2008 13:58:10 -0800

autobuilder (4.1) unstable; urgency=low

  * Use rewritten Debian.VersionPolicy module, vendor tags will always
    be added to version numbers unless the --do-not-change-version flag
    is given.
  * Configuration updates to use new merged ubuntu and debian repositories.
  * Add a Release-Alias parameter, to tell autobuilder to use bpo40+ for
    the etch release name when constructing versions.
  * Eliminate some uncaught exceptions so execution can continue when target
    builds fail.

 -- David Fox <ddssff@gmail.com>  Mon, 28 Jan 2008 13:54:03 -0800

autobuilder (4.0) unstable; urgency=low

  * Changes for GHC 6.8.2.
  * Improvements in build dependency computation

 -- David Fox <dsf@seereason.com>  Mon, 21 Jan 2008 20:49:03 +0000

autobuilder (3.9) unstable; urgency=low

  * Darcs targets can have a tag, appended to the URI following an equals sign
    similar to the way apt targets can specify a version number:
       darcs:http://http://darcs.haskell.org/crypto=4.0.3
    The --tag argument will be passed to darcs get if a tag is given.

 -- David Fox <dsf@seereason.org>  Wed,  7 Nov 2007 09:11:07 -0800

autobuilder (3.8) unstable; urgency=low

  * Cache prepared AptImage objects in the AptIO IOState so we don't
    keep running apt-get update on them (which, as Cliff points out,