@@ -1,5 +1,5 @@
 Name:           AutoBuilder
-Version:        2.0
+Version:        4.4
 License:        BSD3
 Author:         David Fox
 Synopsis:       Build Debian source packages in suitable environments
